# pretty_print_xtensor

./: .gdbinit  .gitignore  CMakeLists.txt  Readme.md  class_samp.cpp  hell.cpp  printer.py  setup_gdb.txt  xtensor_printer.py  xvector.txt
testing_prg/: CMakeLists.txt  build_script.sh
xtensor_printer/: conanfile.txt  setup_printer.md  testing_prg.cpp  xtensor_printer.py
